Added theme description to style.css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*
 Theme Name: JexiDevWP Lite
+Description: A developer-first WordPress theme built from scratch, and used as the base for websites I create. 
 Author: Jexi
 Version: 1.0
 */
