--- a/assets/scss/base/_resets.scss
+++ b/assets/scss/base/_resets.scss
@@ -16,9 +16,8 @@ dd {
   margin: 0;
 }
 
-// Better text spacing and MacOS font rendering
+//  MacOS font rendering
 body {
-    line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
 
