--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,1 +1,20 @@
+body {
+  font-family: system-ui, sans-serif;
+  line-height: 1.5;
+  color: #111;
+  background-color: #fff;
+}
+
+// Add space between main content and header/footer
+main {
+  padding-block: 2rem;
+}
+
+// Make topography feel readable
+.entry-content {
+  max-width: 70ch;
+  margin-inline: auto;
+  padding-inline: 1rem;
+}
+
 
