--- a/assets/scss/base/_resets.scss
+++ b/assets/scss/base/_resets.scss
@@ -22,7 +22,7 @@ body {
 }
 
 // Better image control
-img, picture {
+img, picture, video, canvas, svg {
     max-width: 100%;
     display: block;
 }
