--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -29,6 +29,12 @@ h4 { font-size: 1.5rem; }
 h5 { font-size: 1.25rem; }
 h6 { font-size: 1rem; }
 
+// Paragraphs
+p {
+  margin-block: 1rem;
+}
+
+
 // Default link rules
 a {
   color: inherit;
