--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -15,11 +15,19 @@ nav a {
 
 .mobile-nav {
   display: none;
+  
 
   &.is-open {
     display: block;
   }
 }
+
+.mobile-nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 
 @media (min-width: 1024px) {
   .mobile-nav {
